# SkillMesh

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/benchmarks/: 2026-03-01-initial-smoke.md  2026-03-01-real-10task.csv  2026-03-01-real-10task.human-eval.combined.csv  2026-03-01-real-10task.human-eval.key.csv  2026-03-01-real-10task.human-eval.summary.csv  2026-03-01-real-10task.human-eval.summary.md  2026-03-01-real-10task.md  2026-03-02-topk-531-10task-chroma-rrf-3070.csv  2026-03-02-topk-531-10task-chroma-rrf-5050.csv  2026-03-02-topk-531-10task-chroma-rrf-7030.csv  2026-03-02-topk-531-10task-chroma-rrf.csv  2026-03-02-topk-531-10task-chroma-rrf.human-eval.combined.csv  2026-03-02-topk-531-10task-chroma-rrf.human-eval.key.csv  2026-03-02-topk-531-10task-chroma-rrf.human-eval.summary.csv  2026-03-02-topk-531-10task-chroma-rrf.human-eval.summary.md  2026-03-02-topk-531-10task-chroma-rrf.human-eval.template.csv  2026-03-02-topk-531-10task-chroma-rrf.md  2026-03-02-topk-531-10task.csv  2026-03-02-topk-531-10task.human-eval.combined.csv  2026-03-02-topk-531-10task.human-eval.key.csv  2026-03-02-topk-531-10task.human-eval.summary.csv  2026-03-02-topk-531-10task.human-eval.summary.md  2026-03-02-topk-531-10task.human-eval.template.csv  2026-03-02-topk-531-10task.md  benchmark-template.md  human-eval.md
docs/integrations/: claude-code.md  claude-desktop.md  codex.md
docs/plans/: 2026-02-28-growth-plan.md  2026-02-28-v2-design.md  2026-02-28-v2-implementation.md
examples/mcp/: claude-desktop.linux.json  claude-desktop.macos.json  claude-desktop.windows.json
examples/notebooks/: getting-started.ipynb
examples/registry/: bi-analytics.registry.yaml  cloud-bi.registry.yaml  cloud-gcp.registry.yaml  data-engineering.registry.yaml  devops.registry.yaml  experts.yaml  ml-engineering.registry.yaml  roles.registry.yaml  schema.json  tools.enriched.json  tools.json  tools.yaml  web-apis.registry.yaml
scripts/: benchmark_human_eval.py  compile_registry.py
skills/skillgate-router/: SKILL.md
skills/skillmesh/: SKILL.md
src/skill_registry_rag/: __init__.py  _resolve.py  cli.py  mcp_server.py  models.py  registry.py  retriever.py  (+1 more)
tests/: test_adapters.py  test_backends.py  test_benchmark_human_eval.py  test_cli.py  test_mcp_server.py  test_registry.py  test_retriever.py  test_roles.py
(+180 files in other folders)
