[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgate"
version = "0.1.0"
description = "A retrieval-gated skill architecture for LLM agents that scales to hundreds of tools by exposing only the top-K relevant capabilities per request."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Open Skill Registry Contributors" }]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "rank-bm25>=0.2.2",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dense = ["sentence-transformers>=2.7.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6.0"]

[project.scripts]
skill-rag = "skill_registry_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
